Fixed button margins on the main page. Selection boxes and time inputs on the timetable page are now aligned. Unnecessary scripts are deleted.

--- a/src/frontend/pjait_map_frontend/static/css/styles.css
+++ b/src/frontend/pjait_map_frontend/static/css/styles.css
@@ -84,7 +84,7 @@ header {
   background-color: red;
   color: white;
   padding: 8px 44px;
-  margin-bottom: 0px;
+  margin-bottom: 10px;
   border-radius: 10px;
   cursor: pointer;
   display: flex;
